tests/invalid/comprehension_enumerate_non_list_arg/main.py
def run_case() -> None:
    x: list[int] = [i for (i, v) in enumerate((1, 2))]

if __name__ == "__main__":
    run_case()
